--- a/index.html
+++ b/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aprendendo a Aprender</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./vendor/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
     <div class="page">
-        <header class="header">
+      <header class="header">
+        <div class="logo">
+          <img
+            src="./images/TripletenLogo.svg"
+            alt="TripletenLogo"
+            class="logo_place_header"
+          />
+        </div>
+        <div class="header__title">
+          <h1>Aprendendo a Aprender</h1>
+        </div>
+        <div class="header__subtitle">
+          <p>
+            As técnicas de aprendizado mais eficazes que você pode aplicar ao
+            seu cotidiano.
+          </p>
+          <a class="header__link" href="#">Saiba mais</a>
+        </div>
 
-        </header>
-        <main class="content">
-            <section class="description">
-            </section>
-            
-            <section class="digits">
-            </section>
+        <img
+          src="./images/on_the_edge.png"
+          alt="on_the_edge"
+          class="header__main-illustration"
+        />
 
-            <section class="feynman">
-            </section>
-            
-            <section class="kaufman">
-            </section>
-        </main>
-        <footer class="footer">
+        <div class="header__square"></div>
+      </header>
+      <main class="content">
+        <section class="description">
+          <div class="two-columns">
+            <div class="two-columns__brief"></div>
+            <div class="two-columns__main-text"></div>
+          </div>
+        </section>
 
-        </footer>
+        <section class="digits"></section>
+
+        <section class="feynman"></section>
+
+        <section class="kaufman"></section>
+      </main>
+      <footer class="footer"></footer>
     </div>
-</body>
+  </body>
 </html>
